<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="@string/app_name"
    app:startDestination="@id/pickFragment">

    <fragment
        android:id="@+id/pickFragment"
        android:name="tr.com.emrememis.app.leo.ui.pick.PickFragment"
        android:label="@string/fragment_pick_label"
        tools:layout="@layout/fragment_pick">
        <action
            android:id="@+id/action_pickFragment_to_permissionsFragment"
            app:destination="@id/permissionsFragment" />
        <action
            android:id="@+id/action_pickFragment_to_musicFragment"
            app:destination="@id/musicFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/permissionsFragment"
        android:name="tr.com.emrememis.app.leo.ui.permissions.PermissionsFragment"
        android:label="@string/fragment_permissions_label"
        tools:layout="@layout/fragment_permissions" />
    <fragment
        android:id="@+id/musicFragment"
        android:name="tr.com.emrememis.app.leo.ui.music.MusicFragment"
        android:label="@string/fragment_music_label"
        tools:layout="@layout/fragment_music">
        <action
            android:id="@+id/action_musicFragment_to_clipartFragment"
            app:destination="@id/clipartFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="tr.com.emrememis.app.leo.ui.result.ResultFragment"
        android:label="@string/fragment_result_label"
        tools:layout="@layout/fragment_result" />
    <fragment
        android:id="@+id/clipartFragment"
        android:name="tr.com.emrememis.app.leo.ui.clipart.ClipartFragment"
        android:label="@string/fragment_clipart_label"
        tools:layout="@layout/fragment_clipart" >
        <action
            android:id="@+id/action_clipartFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/fragment_fade_enter" />
    </fragment>
</navigation>